--- a/CalculadoraDifal/MainPage.xaml
+++ b/CalculadoraDifal/MainPage.xaml
@@ -22,30 +22,34 @@
             <ColumnDefinition Width="0*"/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <TextBlock HorizontalAlignment="Left" Margin="27,80,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Grid.ColumnSpan="2" Grid.RowSpan="2" Width="112" Height="21"><Run Text="Alíquota Inter"/><Run Text="na:"/></TextBlock>
+        <TextBlock HorizontalAlignment="Left" Margin="27,80,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Grid.ColumnSpan="2" Grid.RowSpan="2" Width="112" Height="21"><Run Text="Alíquota Interna:"/></TextBlock>
         <TextBlock HorizontalAlignment="Left" Margin="27,29,0,0" TextWrapping="Wrap" Text="Valor Produto:" VerticalAlignment="Top" Grid.ColumnSpan="2" Grid.RowSpan="2"/>
         <TextBlock HorizontalAlignment="Left" Margin="27,124,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Grid.ColumnSpan="2" Grid.RowSpan="2" Width="112" Height="21" Text="Situação Fiscal:"/>
-        <TextBlock HorizontalAlignment="Left" Margin="27,217,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Grid.ColumnSpan="2" Grid.RowSpan="2" Width="71" Height="21" SelectionChanged="TextBlock_SelectionChanged" Text="Estado:"/>
-        <TextBlock HorizontalAlignment="Left" Margin="27,167,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Grid.ColumnSpan="2" Grid.RowSpan="2" Width="112" Height="21" SelectionChanged="TextBlock_SelectionChanged" Text="Origem:"/>
-        <TextBox x:Name="valorDoProduto" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="135,22,0,0" Grid.RowSpan="2" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="258" TextChanged="TextBox_TextChanged" Height="32" BorderThickness="2,2,2,2" RequestedTheme="Default" Padding="10,3,6,6"/>
-        <TextBox x:Name="aliquotaInterna" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="135,73,0,0" Grid.RowSpan="2" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="258" TextChanged="TextBox_TextChanged" Height="32"/>
+        <TextBlock HorizontalAlignment="Left" Margin="27,217,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Grid.ColumnSpan="2" Grid.RowSpan="2" Width="71" Height="21" Text="Estado:"/>
+        <TextBlock HorizontalAlignment="Left" Margin="27,167,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Grid.ColumnSpan="2" Grid.RowSpan="2" Width="112" Height="21" Text="Origem:"/>
+        <TextBox x:Name="valorDoProduto" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="135,22,0,0" Grid.RowSpan="2" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="258" TextChanged="TextBox_ProductValue" Height="32" BorderThickness="2,2,2,2" RequestedTheme="Default" Padding="10,3,6,6"/>
+        <TextBox x:Name="aliquotaInterna" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="135,73,0,0" Grid.RowSpan="2" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="258" TextChanged="TextBox_InternalRate" Height="32"/>
         <Grid Grid.Column="1" Grid.Row="1" VerticalAlignment="Top" Width="258" Margin="135,124,24,0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="104*"/>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="121*"/>
             </Grid.ColumnDefinitions>
-            <RadioButton x:Name="situacaoFiscalRadio1" Content="Contribuinte" Width="22" Height="32" RenderTransformOrigin="0.5,0.5" Checked="RadioButton_Checked_1" Grid.ColumnSpan="2" Margin="0,-5,0,0" VerticalAlignment="Top"/>
-            <RadioButton x:Name="situacaoFiscalRadio2" Content="Não Contribuinte" Margin="16,-5,0,0" FontSize="14" Width="138" MinWidth="120" Padding="8,6,0,0" UseLayoutRounding="True" Checked="RadioButton_Checked_1" Grid.ColumnSpan="2" Grid.Column="1" VerticalAlignment="Top"/>
+            <RadioButton x:Name="situacaoFiscalRadio1" Content="Contribuinte" Width="22" Height="32" RenderTransformOrigin="0.5,0.5" Checked="RadioButton_ContributorType" Grid.ColumnSpan="2" Margin="0,-5,0,0" VerticalAlignment="Top"/>
+            <RadioButton x:Name="situacaoFiscalRadio2" Content="NãoContribuinte" Margin="16,-5,0,0" FontSize="14" Width="138" MinWidth="120" Padding="8,6,0,0" UseLayoutRounding="True" Checked="RadioButton_ContributorType" Grid.ColumnSpan="2" Grid.Column="1" VerticalAlignment="Top"/>
         </Grid>
         <Grid Grid.Column="1" Grid.Row="1" VerticalAlignment="Top" Width="240" Margin="135,160,42,0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="19*"/>
+                <RowDefinition Height="13*"/>
+            </Grid.RowDefinitions>
 
-            <RadioButton x:Name="origemRadio1" Content="Nacional" VerticalAlignment="Top" Width="22" Height="32" RenderTransformOrigin="0.5,0.5" Checked="RadioButton_Checked"/>
-            <RadioButton x:Name="origemRadio2" Content="Importado" Margin="135,0,0,0" Width="22" Height="32" RenderTransformOrigin="0.5,0.5" Checked="RadioButton_Checked"/>
+            <RadioButton x:Name="origemRadio1" Content="Nacional" Width="22" Height="32" RenderTransformOrigin="0.5,0.5" Checked="RadioButton_Origin" HorizontalAlignment="Right" Margin="0,0,120,0" Grid.RowSpan="2" VerticalAlignment="Top"/>
+            <RadioButton x:Name="origemRadio2" Content="Internacional" Margin="135,0,0,0" Width="22" Height="32" RenderTransformOrigin="0.5,0.5" Checked="RadioButton_Origin" Grid.RowSpan="2" VerticalAlignment="Top"/>
 
         </Grid>
 
-        <ComboBox x:Name="estado" Grid.ColumnSpan="2" Margin="135,210,0,0" Grid.RowSpan="2" Width="258" Height="32" SelectionChanged="estado_SelectionChanged">
+        <ComboBox x:Name="estado" Grid.ColumnSpan="2" Margin="135,210,0,0" Grid.RowSpan="2" Width="258" Height="32" SelectionChanged="SelectionChanged_State">
             <ComboBoxItem>AC</ComboBoxItem>
             <ComboBoxItem>AL</ComboBoxItem>
             <ComboBoxItem>AM</ComboBoxItem>
@@ -73,9 +77,8 @@
             <ComboBoxItem>SE</ComboBoxItem>
             <ComboBoxItem>TO</ComboBoxItem>
         </ComboBox>
-        <TextBox x:Name="resultado" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="27,264,0,0" Grid.RowSpan="2" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Height="143" Width="366"/>
-        <Button x:Name="botaoCalcular" Content="Calcular" Grid.ColumnSpan="2" Margin="27,429,0,0" Grid.RowSpan="2" VerticalAlignment="Top" Click="Button_Click" Width="175"/>
-        <Button x:Name="botaoResetar" Content="Resetar" Grid.ColumnSpan="2" Margin="218,429,0,0" Grid.RowSpan="2" VerticalAlignment="Top" Click="Button_Click" Width="175"/>
-
+        <TextBox x:Name="resultado" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="27,264,0,0" Grid.RowSpan="2" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Height="143" Width="366" IsReadOnly="True" IsEnabled="False" TextChanged="TextChanged_Results"/>
+        <Button x:Name="botaoCalcular" Content="Calcular" Grid.ColumnSpan="2" Margin="27,429,0,0" Grid.RowSpan="2" VerticalAlignment="Top" Click="Button_Click_Calculate" Width="175"/>
+        <Button x:Name="botaoResetar" Content="Resetar" Grid.ColumnSpan="2" Margin="218,429,0,0" Grid.RowSpan="2" VerticalAlignment="Top" Click="Button_Click_Reset" Width="175"/>
     </Grid>
 </Page>
