Ajustes nos aliquotas.

--- a/CalculadoraDifal/MainPage.xaml
+++ b/CalculadoraDifal/MainPage.xaml
@@ -35,8 +35,8 @@
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="121*"/>
             </Grid.ColumnDefinitions>
-            <RadioButton x:Name="situacaoFiscalRadio1" Content="Contribuinte" Width="22" Height="32" RenderTransformOrigin="0.5,0.5" Checked="RadioButton_ContributorType" Grid.ColumnSpan="2" Margin="0,-5,0,0" VerticalAlignment="Top"/>
-            <RadioButton x:Name="situacaoFiscalRadio2" Content="NãoContribuinte" Margin="16,-5,0,0" FontSize="14" Width="138" MinWidth="120" Padding="8,6,0,0" UseLayoutRounding="True" Checked="RadioButton_ContributorType" Grid.ColumnSpan="2" Grid.Column="1" VerticalAlignment="Top"/>
+            <RadioButton x:Name="contrib" Content="Contribuinte" Width="22" Height="32" RenderTransformOrigin="0.5,0.5" Checked="RadioButton_ContributorType" Grid.ColumnSpan="2" Margin="0,-5,0,0" VerticalAlignment="Top"/>
+            <RadioButton x:Name="nonContributor" Content="NãoContribuinte" Margin="6,-5,0,0" FontSize="14" Width="142" MinWidth="120" Padding="8,6,0,0" UseLayoutRounding="True" Checked="RadioButton_ContributorType" Grid.ColumnSpan="2" Grid.Column="1" VerticalAlignment="Top"/>
         </Grid>
         <Grid Grid.Column="1" Grid.Row="1" VerticalAlignment="Top" Width="240" Margin="135,160,42,0">
             <Grid.RowDefinitions>
@@ -44,8 +44,8 @@
                 <RowDefinition Height="13*"/>
             </Grid.RowDefinitions>
 
-            <RadioButton x:Name="origemRadio1" Content="Nacional" Width="22" Height="32" RenderTransformOrigin="0.5,0.5" Checked="RadioButton_Origin" HorizontalAlignment="Right" Margin="0,0,120,0" Grid.RowSpan="2" VerticalAlignment="Top"/>
-            <RadioButton x:Name="origemRadio2" Content="Internacional" Margin="135,0,0,0" Width="22" Height="32" RenderTransformOrigin="0.5,0.5" Checked="RadioButton_Origin" Grid.RowSpan="2" VerticalAlignment="Top"/>
+            <RadioButton x:Name="National" Content="Nacional" Width="22" Height="32" RenderTransformOrigin="0.5,0.5" Checked="RadioButton_Origin" HorizontalAlignment="Right" Margin="0,0,120,0" Grid.RowSpan="2" VerticalAlignment="Top"/>
+            <RadioButton x:Name="International" Content="Internacional" Margin="125,0,0,0" Width="22" Height="32" RenderTransformOrigin="0.5,0.5" Checked="RadioButton_Origin" Grid.RowSpan="2" VerticalAlignment="Top"/>
 
         </Grid>
 
@@ -77,7 +77,7 @@
             <ComboBoxItem>SE</ComboBoxItem>
             <ComboBoxItem>TO</ComboBoxItem>
         </ComboBox>
-        <TextBox x:Name="resultado" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="27,264,0,0" Grid.RowSpan="2" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Height="143" Width="366" IsReadOnly="True" IsEnabled="False" TextChanged="TextChanged_Results"/>
+        <TextBox x:Name="resultado" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="27,264,0,0" Grid.RowSpan="2" TextWrapping="Wrap" VerticalAlignment="Top" Height="143" Width="366" TextChanged="TextChanged_Results" FocusVisualSecondaryBrush="#99000000" FocusVisualPrimaryBrush="White" BorderBrush="#66FFFFFF" Background="#66000000" Foreground="White" SelectionHighlightColor="DimGray" IsReadOnly="True" IsEnabled="False"/>
         <Button x:Name="botaoCalcular" Content="Calcular" Grid.ColumnSpan="2" Margin="27,429,0,0" Grid.RowSpan="2" VerticalAlignment="Top" Click="Button_Click_Calculate" Width="175"/>
         <Button x:Name="botaoResetar" Content="Resetar" Grid.ColumnSpan="2" Margin="218,429,0,0" Grid.RowSpan="2" VerticalAlignment="Top" Click="Button_Click_Reset" Width="175"/>
     </Grid>
